--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Hello, AMPs</title>
     <link rel="canonical" href="https://yukoga.github.io/web-stories-1st-sample/index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-24471868-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-24471868-10', {
+      'page_location': 'location-by-page_location - ' + new Date(),
+      'page_path': 'page-by-page_path - ' + new Date()
+  });
+  gtag('config', 'G-9QS224V0F2', {
+      'page_location': 'location-by-page_location - ' + new Date(),
+      'page_path': 'page-by-page_path - ' + new Date()
+  });
+</script>
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
