Create web stories.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
         <div class="main-contents">This is a test for web stories.</div>
         <amp-img src="https://pbs.twimg.com/profile_images/754771015901720576/kaPjUuDv_400x400.jpg" alt="my-amp-img" layout="responsive" width="200" height="200"></amp-img>
+        <a href="web-stories-1st-sample/first-stories.html">Here is my first web stories.</a>
     </main>
     <footer>Here is the footer. ricopin.</footer>
   </body>
