Changed tracking code.

--- a/page_path_check.html
+++ b/page_path_check.html
@@ -5,12 +5,12 @@
     <title>page_path override test.</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9QS224V0F2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J87FKXEJSN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-9QS224V0F2', {
+  gtag('config', 'G-J87FKXEJSN', {
 //      'page_location': 'location-by-page_location - ' + new Date(),
       'page_title': document.title + ' - ' + new Date(),
       'page_path': 'page-by-page_path-w/o page_location - ' + new Date()
